# blue-coin

./: Cargo.toml  docker-compose.yml
client/: .gitignore  Dockerfile  README.md  bsconfig.json  package-lock.json  package.json  razzle.config.js  webpack.config.js
client/app/: app.js  index.html
client/app/containers/App/: index.js
client/lib/es6_global/src/: App.bs.js  Component1.bs.js  Component2.bs.js  Index.bs.js
client/src/: App.js  App.re  Home.js  Index.re  index.js  server.js
client/src/components/: Home.js  Route1.js
client/src/containers/App/: index.js
client/src/containers/EntryList/: index.js
server/src/: main.rs
services/: .env  Cargo.toml
services/src/: main.rs  main_old.rs
ui/: Dockerfile  package-lock.json  package.json  webpack.config.client.js  webpack.config.js  webpack.config.server.js
ui/src/: App.js  client.js  index.js  server.js
ui/src/components/: Layout.js
ui/ui/: index.js
