[package]
name = "blue-coin-services"
version = "0.1.0"
authors = ["Ryan Chan <rychan14@gmail.com>"]

[dependencies]
# actix = "0.7"
# actix-web = "0.7"

warp="0.1.10"

env_logger = "0.6"
dotenv = "0.13.0"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

listenfd = "0.3"

r2d2="0.8.3"
r2d2_sqlite="0.7.0"
rusqlite="0.15.0"

[build-dependencies]
askama = "0.7"